Update plot lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,19 +10,11 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets OpenGL OpenGLWidgets)
 
-set(ImGui_Source
-    ThirdParty/ImGui/imconfig.h
-    ThirdParty/ImGui/imgui_demo.cpp
-    ThirdParty/ImGui/imgui_draw.cpp
-    ThirdParty/ImGui/imgui_internal.h
-    ThirdParty/ImGui/imgui_tables.cpp
-    ThirdParty/ImGui/imgui_widgets.cpp
-    ThirdParty/ImGui/imgui.cpp
-    ThirdParty/ImGui/imgui.h
-    ThirdParty/ImGui/imstb_rectpack.h
-    ThirdParty/ImGui/imstb_textedit.h
-    ThirdParty/ImGui/imstb_truetype.h
-)
+add_subdirectory(ThirdParty/ImGui)
+add_subdirectory(ThirdParty/ImGuizmo)
+add_subdirectory(ThirdParty/ImNodes)
+add_subdirectory(ThirdParty/ImPlot)
+add_subdirectory(ThirdParty/ImPlot3D)
 
 set(PROJECT_SOURCES
     QImGuiWidget.cpp
@@ -36,10 +28,14 @@ add_library(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ThirdParty/ImGui
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
+    ImGui
+    ImGuizmo
+    ImNodes
+    ImPlot
+    ImPlot3D
     Qt6::Core
     Qt6::Gui
     Qt6::Widgets
